2004-07-15  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(request): remove paragraph justification

	* dotemacs-cust.el
	(custom-set-variables): excluded tramp files from recentf, save in ~/.emacs-recentf

	* perso/xterm-extras.el:
	version update

	* perso/mycode.el:
	fixed mess in this file (cvs bug?)

	* dotemacs.el
	(hi-lock-mode): reactivate

2004-07-14  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(emacs-lisp-mode): added some keywords to emacs-lisp-mode

	* perso/patches.el:
	(request): moved here
	(defmadvice): new macro for duplicating advices over multiple functions

	* dotemacs.el
	(request): replace obsoleted code

2004-07-12  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/mycode.el:
	general cleanup

	* dotemacs.el
	(make-double-command): use (declare) in macro
	(my-home): new command, bound to C-Home
	(my-end): new command, bound to C-End
	(emacs-lisp-mode-map): bind C-c C-c to emacs-lisp-byte-compile
	general cleanup

	* perso/patches.el
	(yank-rpop): go forward in kill ring for yanking (bound to M-Y)

	* perso/mycode.el
	(camille-c-style): change arg list continuation
	(c++-new-font-lock-keywords): better description

	* perso/h4x0r.el
	(h4x0r-sometimes-replace): new way of writing r

	* dotemacs.el:
	(hi-lock-mode): disabled
	(global-visible-mark-mode): disable
	(htmlize-many-files-dired): add autoload

	* dotemacs-cust.el
	(custom-set-variables): prevent eshell to cycle completions

2004-07-02  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	activate every disabled command

	* perso/margin.el
	initial checkin

2004-06-30  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el
	(fortune-program): set to /usr/games/fortune

	* perso/patches.el
	(erase-buffer): re-enabled command

2004-06-23  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/dabbrev-hover.el:
	initial checkin

2004-06-21  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(request): 'saveplace has to be explicitely loaded